--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,19 @@ html{
 body{
     font-family: 'Oswald', sans-serif;
 }
+.card-container{
+    width: 300px;
+    height: 340px;
+    overflow: hidden;   
+}
+.img-container{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top center;
+    transition: all 4s ease-in-out;
+}
+.card-container:hover .img-container{
+    object-position: bottom center;
+    
+}
