--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 html{
     scroll-behavior: smooth;
 }
-
+*{
+    font-family: 'Cabin', sans-serif;
+}
 .card-container{
     height: 340px;
     overflow: hidden;   
